--- a/app-of-apps/templates/nginx-ingress.yaml
+++ b/app-of-apps/templates/nginx-ingress.yaml
@@ -9,12 +9,14 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
+  # sourceNamespaces:
+  # - ingress-nginx
   sourceRepos:
   - '*'
   # Only permit applications to deploy to the guestbook namespace in the same cluster
-  # destinations:
-  # - namespace: ingress-nginx
-  #   server: https://kubernetes.default.svc
+  destinations:
+  - namespace: ingress-nginx
+    server: https://kubernetes.default.svc
   # Deny all cluster-scoped resources from being created, except for Namespace
   clusterResourceWhitelist:
   - group: ''
