--- a/app-of-apps/templates/nginx-ingress.yaml
+++ b/app-of-apps/templates/nginx-ingress.yaml
@@ -13,9 +13,9 @@ spec:
   # - ingress-nginx
   sourceRepos:
   - '*'
-  # destinations:
-  # - namespace: ingress-nginx
-  #   server: https://kubernetes.default.svc
+  destinations:
+  - namespace: ingress-nginx
+    server: https://kubernetes.default.svc
   # Deny all cluster-scoped resources from being created, except for Namespace
   # clusterResourceWhitelist:
   # - group: ''
