--- a/app-of-apps/templates/nginx-ingress.yaml
+++ b/app-of-apps/templates/nginx-ingress.yaml
@@ -40,6 +40,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: ingress-nginx
+  namespace: argocd
 spec:
   destination:
     namespace: nginx-ingress
