--- a/app-of-apps/templates/nginx-ingress.yaml
+++ b/app-of-apps/templates/nginx-ingress.yaml
@@ -15,7 +15,7 @@ spec:
   - '*'
   destinations:
   - namespace: ingress-nginx
-    server: https://kubernetes.default.svc
+    server: {{ .Values.spec.destination.server }}
   # Deny all cluster-scoped resources from being created, except for Namespace
   # clusterResourceWhitelist:
   # - group: ''
@@ -43,8 +43,8 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: nginx-ingress
-    server: 'https://kubernetes.default.svc'
+    namespace: ingress-nginx
+    server: {{ .Values.spec.destination.server }}
   source:
     path: ''
     repoURL: 'https://kubernetes.github.io/ingress-nginx'
