--- a/app-of-apps/templates/ingress-nginx.yaml
+++ b/app-of-apps/templates/ingress-nginx.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.spec.ingress-nginx.enabled }}
+{{- if .Values.spec.ingressNginx.enabled }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
@@ -13,7 +13,7 @@ spec:
   sourceRepos:
   - '*'
   destinations:
-  - namespace: {{ .Values.spec.ingress-nginx.namespace }}
+  - namespace: {{ .Values.spec.ingressNginx.namespace }}
     server: {{ .Values.spec.destination.server }}
   # Allow all cluster-scoped resources to be created
   clusterResourceWhitelist:
@@ -31,7 +31,7 @@ spec:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Values.spec.ingress-nginx.namespace }}
+  name: {{ .Values.spec.ingressNginx.namespace }}
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 ---
@@ -42,10 +42,11 @@ metadata:
   namespace: {{ .Values.spec.argocd.namespace }}
 spec:
   destination:
-    namespace: {{ .Values.spec.ingress-nginx.namespace }}
+    namespace: {{ .Values.spec.ingressNginx.namespace }}
     server: {{ .Values.spec.destination.server }}
   source:
     repoURL: 'https://kubernetes.github.io/ingress-nginx'
     chart: ingress-nginx
-    targetRevision: {{ .Values.spec.ingress-nginx.version }}
+    targetRevision: {{ .Values.spec.ingressNginx.version }}
   project: ingress-nginx
+{{- end }}
