--- a/app-of-apps/templates/external-dns.yaml
+++ b/app-of-apps/templates/external-dns.yaml
@@ -17,8 +17,10 @@ spec:
     server: {{ .Values.spec.destination.server }}
   # Allow all cluster-scoped resources to be created
   clusterResourceWhitelist:
-  - group: '*'
-    kind: '*'
+  - kind: 'Namespace'
+  - kind: 'ServiceAccount'
+  - kind: 'ClusterRole'
+  - kind: 'ClusterRoleBinding'
   # Allow all namespaced-scoped resources to be created, except for ResourceQuota, LimitRange, NetworkPolicy
   namespaceResourceBlacklist:
   - group: ''
