--- a/app-of-apps/templates/external-dns.yaml
+++ b/app-of-apps/templates/external-dns.yaml
@@ -18,9 +18,13 @@ spec:
   # Allow all cluster-scoped resources to be created
   clusterResourceWhitelist:
   - kind: 'Namespace'
+    group: ''
   - kind: 'ServiceAccount'
+    group: ''
   - kind: 'ClusterRole'
+    group: ''
   - kind: 'ClusterRoleBinding'
+    group: ''
   # Allow all namespaced-scoped resources to be created, except for ResourceQuota, LimitRange, NetworkPolicy
   namespaceResourceBlacklist:
   - group: ''
