--- a/app-of-apps/templates/external-dns.yaml
+++ b/app-of-apps/templates/external-dns.yaml
@@ -46,6 +46,8 @@ kind: Application
 metadata:
   name: external-dns
   namespace: {{ .Values.spec.argocd.namespace }}
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: external-dns
   destination:
