--- a/app-of-apps/values.yaml
+++ b/app-of-apps/values.yaml
@@ -15,10 +15,10 @@ spec:
 
   metallb:
     enabled: true
-    version: v0.13.11
+    # version: v0.13.11
     namespace: metallb-system
-    addresses:
-      - 10.1.1.110/28
+    # addresses:
+    #   - 10.1.1.110/28
 
   externalDNS:
     enabled: true
