--- a/app-of-apps/templates/cert-manager.yaml
+++ b/app-of-apps/templates/cert-manager.yaml
@@ -16,15 +16,8 @@ spec:
   - namespace: {{ .Values.spec.certManager.namespace }}
     server: {{ .Values.spec.destination.server }}
   # Allow all cluster-scoped resources to be created
-  clusterResourceWhitelist:
-  - kind: 'Namespace'
-    group: ''
-  - kind: 'ServiceAccount'
-    group: ''
-  - kind: 'ClusterRole'
-    group: 'rbac.authorization.k8s.io'
-  - kind: 'ClusterRoleBinding'
-    group: 'rbac.authorization.k8s.io'
+  - group: '*'
+    kind: '*'
   # Allow all namespaced-scoped resources to be created, except for ResourceQuota, LimitRange, NetworkPolicy
   namespaceResourceBlacklist:
   - group: ''
