--- a/app-of-apps/templates/cert-manager.yaml
+++ b/app-of-apps/templates/cert-manager.yaml
@@ -15,6 +15,8 @@ spec:
   destinations:
   - namespace: {{ .Values.spec.certManager.namespace }}
     server: {{ .Values.spec.destination.server }}
+  - namespace: kube-system
+    server: {{ .Values.spec.destination.server }}
   # Allow all cluster-scoped resources to be created
   clusterResourceWhitelist:
   - group: '*'
