--- a/cert-manager/templates/clusterissuer.yaml
+++ b/cert-manager/templates/clusterissuer.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -8,6 +9,23 @@ spec:
     email: {{ .Values.acmeEmail }}
     privateKeySecretRef:
       name: letsencrypt-staging
+    solvers:
+    - dns01:
+        cloudflare:
+          apiTokenSecretRef:
+            name: cloudflare-api-secret
+            key: api-token
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: {{ .Values.acmeEmail }}
+    privateKeySecretRef:
+      name: letsencrypt-prod
     solvers:
     - dns01:
         cloudflare:
