--- a/argocd/templates/ingress.yaml
+++ b/argocd/templates/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: argocd-server-ingress
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     # If you encounter a redirect loop or are getting a 307 response code
     # then you need to force the nginx ingress to connect to the backend using HTTPS.
